# extract-accounting-excel

./: .dockerignore  .gitignore  Dockerfile  README.md  backup-projeto-v3.ps1  docker-compose.yml
backend/: _config_exec.txt  pyproject.toml  requirements.txt
backend/app/: database.py  main.py  seed.py
backend/app/api/v1/endpoints/: lote.py  pendencia.py
backend/app/core/: exceptions.py  protocols.py
backend/app/models/: __init__.py  account_mapping.py  database_models.py  layout_excel.py  protocolo.py  staging_entry.py
backend/app/repositories/: account_mapping_repository.py  protocolo_repository.py
backend/app/schemas/: lote.py  pendencia.py
backend/app/services/: conta_mapper.py  excel_parser.py  lote_processor.py  periodo_validator.py
doc/: Roadmap.md  implement.md  implemente_frontend.md
excel/: LUCAS 01-2026.xlsx
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DownloadButton.tsx  StatusChip.tsx
frontend/src/components/cards/: PendenciaCard.tsx  ProtocoloCard.tsx
frontend/src/components/forms/: LoteForm.tsx  MapeamentoInput.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx
frontend/src/components/ui/: select.tsx  toast.tsx  toaster.tsx
frontend/src/context/: ToastContext.tsx
frontend/src/hooks/: useLocalStorage.ts  usePolling.ts  useToast.ts
frontend/src/pages/: Home.tsx  Pendencias.tsx
frontend/src/types/: api.ts
