[project]
name = "extract-accounting-excel"
version = "0.1.0"
dependencies = [
    "fastapi>=0.109.0,<0.120.0",
    "sqlalchemy>=2.0.25,<2.1.0",
    "uvicorn[standard]>=0.27.0,<0.30.0",
    "pydantic[email]>=2.6.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "sqlmodel>=0.0.16,<0.1.0",
    "aiosqlite>=0.19.0,<0.20.0",
    "python-calamine>=0.2.0,<0.3.0",
    "python-multipart>=0.0.6,<0.1.0",
    "fastapi-mail>=1.4.0,<2.0.0"
]